[ADD][setup/cloudinary] Config cloudinary for upload image for Playlist
